* :ref:`Version 5.1.1 <kotlin-coroutine-version-5.1.1>`
* :ref:`Version 5.1 <kotlin-coroutine-version-5.1>`
* :ref:`Version 5.0 <version-5.0>`
* :ref:`Version 4.11 <version-4.11>`
* :ref:`Version 4.10 <version-4.10>`

.. _kotlin-coroutine-version-5.4:

What's New in 5.4
-----------------

The 5.4 driver release includes the following changes, fixes,
and features:

.. sharedinclude:: dbx/jvm/v5.4-wn-items.rst

   .. replacement:: install-bom-link

      the :ref:`kotlin-get-started-install-bom` step of the Quick Start

   .. replacement:: sort-option-link

      the :ref:`kotlin-client-bulk-write-update` and
      :ref:`kotlin-client-bulk-write-replace` sections of the Bulk
      Operations guide

   .. replacement:: k8s-link

      the :ref:`MONGODB-OIDC: Kubernetes <kotlin-auth-kubernetes>`
      section of the Enterprise Authentication Mechanisms guide

   .. replacement:: atlas-query-operators

      the `SearchOperator <{+core-api+}/client/model/search/SearchOperator.html>`__
      interface API documentation

   .. replacement:: atlas-query-operators

      the :ref:`kotlin-cr-atlas-search-stage` section of the Aggregates
      Builders guide

.. _kotlin-coroutine-version-5.3:

What's New in 5.3
-----------------

The 5.3 driver release includes the following new features,
improvements, and fixes:

.. sharedinclude:: dbx/jvm/v5.3-wn-items.rst

   .. replacement:: vector-type-example-link

      To learn about how to use this type when using the Atlas
      Vector Search feature, see the :ref:`kotlin-atlas-vector-search`
      guide.

   .. replacement:: update-replace-example-link
      
      the :ref:`kotlin-fundamentals-change-document` and :ref:`kotlin-fundamentals-bulkwrite` 
      guides

- Support for using builders class methods directly with data class
  properties. To learn more, see the :ref:`kotlin-builders-data-classes`
  guide. This functionality is supported by the `{+driver-short+}