@@ -173,7 +173,8 @@ package to create a codec for your ``@Serializable`` data classes and
 customize what is stored.
 
 Use the ``BsonConfiguration`` class to define the configuration, 
-including whether to encode defaults, encode nulls, or define class discriminators.
+including whether to encode defaults, encode nulls, define class discriminators,
+or enforce snake case.
 
 To create a custom codec, install the ``bson-kotlinx``
 dependency to your project. Select from the following tabs to see how to
@@ -241,12 +242,33 @@ The following example shows how to create a codec using the
 .. literalinclude:: /examples/generated/KotlinXSerializationTest.snippet.custom-serialization.kt
     :language: kotlin
 
+.. _kotlin-serialization-snake-case-eg:
+
+Implement Snake Case Naming Strategy
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+When using ``bson-kotlinx`` package v5.4 or later, you can direct the driver to
+serialize data class field names written in camel case to snake case in MongoDB.
+The following example shows how to create and register a custom codec
+to convert data class field names into snake case by setting the
+``bsonNamingStrategy`` parameter in a codec:
+
+.. code-block:: kotlin
+    :copyable: true
+
+   import org.bson.codecs.kotlinx.BsonConfiguration
+   import org.bson.codecs.kotlinx.BsonNamingStrategy
+
+.. literalinclude:: /examples/generated/KotlinXSerializationTest.snippet.snake-case-naming.kt
+   :language: kotlin
+
 For more information about the methods and classes mentioned in this section,
 see the following API documentation:
 
 - `KotlinSerializerCodec <{+api-root+}/bson-kotlinx/bson-kotlinx/org.bson.codecs.kotlinx/-kotlin-serializer-codec/index.html>`__
 - `KotlinSerializerCodec.create() <{+api-root+}/bson-kotlinx/bson-kotlinx/org.bson.codecs.kotlinx/-kotlin-serializer-codec/-companion/create.html>`__
 - `BsonConfiguration <{+api-root+}/bson-kotlinx/bson-kotlinx/org.bson.codecs.kotlinx/-bson-configuration/index.html>`__
+- `BsonNamingStrategy <{+api-root+}/bson-kotlinx/bson-kotlinx/org.bson.codecs.kotlinx/-bson-naming-strategy/index.html>`__
  
 .. _kotlin-polymorphic:
 
