@@ -31,6 +31,10 @@ What's New in 5.4
 The 5.4 driver release includes the following changes, fixes,
 and features:
 
+- Adds ``BsonConfiguration`` support for ``bson-kotlinx`` snake case conversion
+  during serialization. To learn more, see the
+  :ref:`kotlin-serialization-snake-case-eg` section on the Serialization page.
+
 .. sharedinclude:: dbx/jvm/v5.4-wn-items.rst
 
    .. replacement:: install-bom-link
